--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="exemple.js"></script>
+        <script src="jquery.min.js"></script>
 
         <script>
         
@@ -202,6 +203,10 @@
             //var saisie = prompt("Saisissez votre nom : ");
             //alert("Bonjour " + saisie);
             // Modification d'une variable externe = closure*/
+
+            $(function(){
+              alert();
+            });
         </script>
       </div>
     </div>    
